# xacc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci-linux-python.yml
python/: py_observable.cpp
python/compiler/: CMakeLists.txt
python/compiler/tests/: PyXASMCompilerTester.cpp
python/plugins/observables/: psi4_observable.py  pyscf_observable.py
quantum/gate/ir/: CommonGates.cpp  CommonGates.hpp
quantum/gate/utils/tests/: IRUtilsTester.cpp
quantum/observable/: CMakeLists.txt
quantum/observable/fermion/: FermionOperator.hpp
quantum/observable/pauli/: CMakeLists.txt  PauliOperator.cpp
quantum/observable/pauli/tests/: PauliOperatorTester.cpp
quantum/plugins/: CMakeLists.txt
quantum/plugins/algorithms/: CMakeLists.txt
quantum/plugins/algorithms/gradient_strategies/: CMakeLists.txt  QuantumNaturalGradient.cpp  QuantumNaturalGradient.hpp
quantum/plugins/algorithms/ml/ddcl/: CMakeLists.txt
quantum/plugins/algorithms/qaoa/tests/: QAOATester.cpp
quantum/plugins/algorithms/qcmx/: CMakeLists.txt
quantum/plugins/algorithms/qite/: CMakeLists.txt  qite.cpp
quantum/plugins/circuits/: CMakeLists.txt
quantum/plugins/circuits/py-qsearch/: CMakeLists.txt
quantum/plugins/circuits/uccsd/: uccsd.cpp
quantum/plugins/circuits/uccsd/tests/: UCCSDTester.cpp
quantum/plugins/decorators/hpc-virtualization/: MPIProxy.cpp  MPIProxy.hpp  hpc_virt_decorator.cpp  hpc_virt_decorator.hpp
quantum/plugins/dwave/: CMakeLists.txt
quantum/plugins/honeywell/: CMakeLists.txt  honeywell.cpp
quantum/plugins/ibm/: CMakeLists.txt  IBMActivator.cpp
quantum/plugins/ibm/accelerator/: IBMAccelerator.cpp  QObjectExperimentVisitor.hpp
quantum/plugins/ibm/accelerator/json/: QObject.hpp
quantum/plugins/ibm/aer/: CMakeLists.txt
quantum/plugins/ibm/aer/py-aer/: CMakeLists.txt
quantum/plugins/ibm/aer/tests/: AerAcceleratorTester.cpp
quantum/plugins/ibm/compiler/: QObjectCompiler.cpp
quantum/plugins/ionq/: ionq_accelerator.cpp  ionq_accelerator.hpp
quantum/plugins/ionq/json/: ionq_program.hpp
quantum/plugins/ionq/tests/: IonQProgramTester.cpp
quantum/plugins/observable_transforms/qubit-tapering/: CMakeLists.txt  qubit_tapering.cpp
quantum/plugins/optimizers/: CMakeLists.txt
quantum/plugins/optimizers/gsl/: CMakeLists.txt  gsl_optimizer.cpp  gsl_optimizer.hpp  manifest.json
quantum/plugins/optimizers/gsl/tests/: CMakeLists.txt  GSLOptimizerTester.cpp
quantum/plugins/optimizers/nlopt-optimizers/: nlopt_optimizer.cpp
quantum/plugins/optimizers/scipy/: CMakeLists.txt  manifest.json  scipy_optimizer.cpp  scipy_optimizer.hpp
quantum/plugins/optimizers/scipy/tests/: CMakeLists.txt  ScipyOptimizerTester.cpp
quantum/plugins/qpp/tests/: QppAcceleratorTester.cpp
quantum/plugins/qsim/accelerator/: QsimAccelerator.hpp
quantum/plugins/qsim/tests/: QsimAcceleratorTester.cpp
quantum/plugins/rigetti/: CMakeLists.txt
quantum/plugins/rigetti/qcs/: CMakeLists.txt
quantum/plugins/rigetti/quilc/: CMakeLists.txt
quantum/plugins/xasm/tests/: XASMCompilerTester.cpp
tpls/: CMakeLists.txt
tpls/gsl/: CMakeLists.txt
tpls/staq/include/ast/: stmt.hpp
xacc/: CMakeLists.txt  xacc.cpp  xacc.hpp
xacc/tests/: HeterogeneousTester.cpp  XACCAPITester.cpp
xacc/utils/: Utils.cpp
